[package]
name = "mangata-node"
version = "0.1.0"
authors = ["Mangata Team"]
edition = "2018"
license = "Unlicense"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }

[[bin]]
name = "mangata-node"
path = "bin/main.rs"

[features]
default = ['mangata-kusama', 'mangata-rococo']
mangata-kusama = [
		"mangata-kusama-runtime/std",
		"xyk-rpc/std",
		"pallet-vesting-mangata-rpc/std",
		"polkadot-cli/kusama-native",
]
mangata-rococo = [
		"mangata-rococo-runtime/std",
		"xyk-rpc/std",
		"pallet-vesting-mangata-rpc/std",
		"polkadot-cli/rococo-native",
]
#disable-execution = ['mangata-kusama-runtime/disable-execution']
runtime-benchmarks = ["mangata-kusama-runtime/runtime-benchmarks", "polkadot-cli/runtime-benchmarks", "polkadot-test-service/runtime-benchmarks"]
fast-runtime = ["mangata-kusama-runtime/fast-runtime", "mangata-kusama-runtime/fast-runtime"]
try-runtime = [
	"mangata-kusama-runtime/try-runtime",
	"mangata-rococo-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
	"polkadot-cli/try-runtime",
	"polkadot-service/try-runtime",
	"sp-runtime/try-runtime"
]

[dependencies]
derive_more = "0.99.2"
futures = "0.3.9"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
hex-literal = "0.3.4"
hex = "0.4.0"

# RPC related Dependencies
jsonrpsee = { version = "0.16.2", features = ["server"] }

# Local Dependencies
mangata-kusama-runtime = { path = "../runtime/mangata-kusama", optional = true }
mangata-rococo-runtime = { path = "../runtime/mangata-rococo", optional = true }

# Substrate Dependencies
mangata-types = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
try-runtime-cli = { git = "https://github.com/mangata-finance/substrate", optional = true, branch = "mangata-dev-v0.9.40" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
pallet-transaction-payment-mangata = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }

pallet-transaction-payment-mangata-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }

substrate-frame-rpc-system = { package = "mangata-rpc-nonce", path = "../rpc/nonce" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }

## Substrate Client Dependencies
sc-basic-authorship-ver = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-chain-spec = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-cli = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-executor = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-network = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-network-common = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-network-light = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-network-sync = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-network-bitswap = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-rpc-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-sysinfo = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-consensus-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-telemetry = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sc-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }

## Substrate Primitive Dependencies
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-session = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
ver-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-storage = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-ver = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40", features = ["helpers"]}


# Cumulus dependencies
cumulus-client-cli = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
# cumulus-client-collator = { git = 'https://github.com/mangata-finance/cumulus', branch = mangata-dev' }
cumulus-client-consensus-aura = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-client-consensus-common = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-client-network = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-client-service = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-primitives-core = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-relay-chain-inprocess-interface = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-relay-chain-interface = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-relay-chain-rpc-interface = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }
cumulus-relay-chain-minimal-node = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40" }


# Polkadot dependencies
polkadot-cli = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v0.9.40" }
polkadot-parachain = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v0.9.40" }
polkadot-primitives = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v0.9.40" }
polkadot-service = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v0.9.40" }
polkadot-test-service = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v0.9.40" }


# Mangata dependencies
xyk-rpc = { default-features = false, version = '2.0.0', path = '../pallets/xyk/rpc' }
xyk-runtime-api = { default-features = false, version = '2.0.0', path = '../pallets/xyk/runtime-api' }

pallet-vesting-mangata-rpc = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev-v0.9.40" }
pallet-vesting-mangata-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev-v0.9.40" }


[dev-dependencies]
sub-tokens = { git = "https://github.com/paritytech/substrate-debug-kit", branch = "master" }
sc-block-builder = { package="sc-block-builder-ver", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }

tokio = { version = "1.15", features = ["macros", "time"] }
pallet-timestamp = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev-v0.9.40" }
sp-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
pallet-transaction-payment-mangata = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
cumulus-pallet-parachain-system = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40"}
cumulus-test-relay-sproof-builder = { git = 'https://github.com/mangata-finance/cumulus', branch = "mangata-dev-v0.9.40"}
polkadot-runtime-common = { git = "https://github.com/mangata-finance/polkadot", branch = "mangata-dev-v0.9.40" }
sp-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40" }
futures = "0.3.21"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false}
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40", features = ["full_crypto"]}
extrinsic-shuffler = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.40"}
cfg-if = "1.0.0"

